emf-services/emf-journal/src/snapshots/emf_journal__tests__admin_client_eviction_parser.snap
---
source: emf-services/emf-journal/src/lib.rs
expression: admin_client_eviction_parser(x).unwrap()
---
(
    2689,
    "client 26959b68-1208-1fca-1f07-da2dc872c55f evicted by the administrator",
)
