emf-services/emf-journal/src/snapshots/emf_journal__tests__client_connection_parser.snap
---
source: emf-services/emf-journal/src/lib.rs
expression: client_connection_parser(input).unwrap()
---
(
    5629,
    "client 26959b68-1208-1fca-1f07-da2dc872c55f from 192.168.122.218@tcp connected to target lustre-MDT0000",
)
