emf-services/emf-journal/src/snapshots/emf_journal__tests__client_eviction_parser-2.snap
---
source: emf-services/emf-journal/src/lib.rs
expression: client_eviction_parser(input).unwrap()
---
(
    23056,
    "client 10.10.6.127@tcp evicted: lock callback timer expired after 151s",
)
