emf-services/emf-journal/src/snapshots/emf_journal__tests__server_security_flavor_parser.snap
---
source: emf-services/emf-journal/src/lib.rs
expression: server_security_flavor_parser(input).unwrap()
---
(
    5629,
    "with security flavor null",
)
